# insurance-distill

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  run_tests_databricks.py
.github/workflows/: ci.yml  docs.yml
benchmarks/: README.md  benchmark.py
notebooks/: 01_motor_distillation_demo.py  02_validation_gini_retention.py  benchmark.py  databricks_test_v014.py  quickstart.ipynb
src/insurance_distill/: __init__.py  _binning.py  _export.py  _surrogate.py  _types.py  _validation.py  lasso_guided.py
tests/: conftest.py  test_binning.py  test_export.py  test_lasso_guided.py  test_surrogate.py  test_validation.py
