[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-distill"
version = "0.1.3"
description = "Distil GBM models into multiplicative GLM factor tables for insurance rating engines."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Burning Cost", email = "pricing.frontier@gmail.com" },
]
keywords = [
    "insurance", "pricing", "actuarial", "glm", "gbm", "catboost",
    "distillation", "surrogate", "radar", "emblem", "rating engine",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "polars>=0.20",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "glum>=2.0",
]

[project.optional-dependencies]
# CatBoost for worked examples. Not required by the library itself.
catboost = [
    "catboost>=1.2",
]
# matplotlib for double-lift charts
plot = [
    "matplotlib>=3.7",
]
# Everything needed for examples and notebooks
all = [
    "catboost>=1.2",
    "matplotlib>=3.7",
]
dev = [
    "pytest>=7",
    "catboost>=1.2",
    "matplotlib>=3.7",
    "pdoc>=14.0.0",
]

[project.urls]
Homepage = "https://github.com/burning-cost/insurance-distill"
Repository = "https://github.com/burning-cost/insurance-distill"
"Issue Tracker" = "https://github.com/burning-cost/insurance-distill/issues"
"Bug Tracker" = "https://github.com/burning-cost/insurance-distill/issues"
Documentation = "https://burning-cost.github.io/insurance-distill/"

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_distill"]

[tool.pytest.ini_options]
testpaths = ["tests"]
